Updatate audio appearance

--- a/style/audio2.css
+++ b/style/audio2.css
@@ -5,7 +5,7 @@
     }
 
     .audio-player audio {
-background-color: #903939; /* Background of the audio player */
+background-color: #c1a1a1; /* Background of the audio player */
 border-radius: 5px; /* Rounded corners */
 padding: 5px; /* Optional padding */
 }
